[gd_scene load_steps=2 format=3 uid="uid://he6p5aj4qor7"]

[ext_resource type="Script" uid="uid://chhbi41vxqdyy" path="res://Scripts/game_over.gd" id="1_ojehl"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ojehl")

[node name="leader_board" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 128.0
offset_right = 768.0
offset_bottom = 448.0
alignment = 1

[node name="score_1" type="Label" parent="leader_board"]
layout_mode = 2

[node name="score_2" type="Label" parent="leader_board"]
layout_mode = 2

[node name="score_3" type="Label" parent="leader_board"]
layout_mode = 2

[node name="score_4" type="Label" parent="leader_board"]
layout_mode = 2

[node name="score_5" type="Label" parent="leader_board"]
layout_mode = 2

[node name="score_6" type="Label" parent="leader_board"]
layout_mode = 2

[node name="score_7" type="Label" parent="leader_board"]
layout_mode = 2

[node name="score_8" type="Label" parent="leader_board"]
layout_mode = 2

[node name="score_9" type="Label" parent="leader_board"]
layout_mode = 2

[node name="score_10" type="Label" parent="leader_board"]
layout_mode = 2

[node name="prompt_label" type="Label" parent="."]
layout_mode = 2
offset_left = 384.0
offset_top = 512.0
offset_right = 527.0
offset_bottom = 535.0
text = "Enter Your Initials:"

[node name="initials_input" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 552.0
offset_top = 512.0
offset_right = 620.563
offset_bottom = 543.0
placeholder_text = "AAA"
max_length = 3

[node name="submit_button" type="Button" parent="."]
layout_mode = 2
offset_left = 480.0
offset_top = 576.0
offset_right = 548.0
offset_bottom = 607.0
text = "Submit"

[node name="restart_button" type="Button" parent="."]
layout_mode = 2
offset_left = 608.0
offset_top = 576.0
offset_right = 676.0
offset_bottom = 607.0
text = "Restart"

[connection signal="text_submitted" from="initials_input" to="." method="_on_initials_input_text_submitted"]
[connection signal="pressed" from="submit_button" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="restart_button" to="." method="_on_restart_button_pressed"]
